# hedtronix

./: .gitignore  Cargo.toml  specs.json
crates/hedtronix-api/: Cargo.toml
crates/hedtronix-api/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
crates/hedtronix-api/src/handlers/: analytics.rs  appointments.rs  audit_log.rs  auth.rs  billing.rs  clinical_notes.rs  health.rs  mod.rs  patients.rs  sync.rs  users.rs
crates/hedtronix-auth/: Cargo.toml
crates/hedtronix-auth/src/: jwt.rs  lib.rs  middleware.rs  permissions.rs  session.rs
crates/hedtronix-core/: Cargo.toml
crates/hedtronix-core/src/: crdt.rs  error.rs  lib.rs  types.rs
crates/hedtronix-core/src/crdt/: change.rs  crdt_list.rs  lww_register.rs  mod.rs  mv_register.rs  version_vector.rs
crates/hedtronix-core/src/models/: appointment.rs  audit_log.rs  billing.rs  clinical_note.rs  department.rs  device.rs  encounter.rs  mod.rs  patient.rs  room.rs  user.rs
crates/hedtronix-crypto/: Cargo.toml
crates/hedtronix-crypto/src/: encryption.rs  hashing.rs  keys.rs  lib.rs
crates/hedtronix-db/: Cargo.toml
crates/hedtronix-db/src/: connection.rs  error.rs  lib.rs  migrations.rs  schema.sql
crates/hedtronix-db/src/repositories/: appointment_repository.rs  billing_repository.rs  clinical_note_repository.rs  mod.rs  patient_repository.rs  sync_repository.rs  user_repository.rs
crates/hedtronix-sync/: Cargo.toml
crates/hedtronix-sync/src/: conflict.rs  engine.rs  lib.rs  protocol.rs
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts
frontend/src/lib/components/: BarChart.svelte  Calendar.svelte  RichTextEditor.svelte  Timeline.svelte  VitalsChart.svelte  VitalsEntryForm.svelte
frontend/src/lib/components/ui/button/: button.svelte  index.ts  module.ts
frontend/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte  index.ts
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/lib/components/ui/label/: label.svelte
frontend/src/lib/components/ui/table/: index.ts  table-body.svelte  table-caption.svelte  table-cell.svelte  table-head.svelte  table-header.svelte  table-row.svelte  table.svelte
frontend/src/lib/components/ui/tabs/: index.ts  tabs-content.svelte  tabs-list.svelte  tabs-trigger.svelte  tabs.svelte
frontend/src/lib/db/: indexed-db.ts
frontend/src/lib/services/: crypto.ts
frontend/src/lib/stores/: auth.ts  sync.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/analytics/: +page.svelte
frontend/src/routes/appointments/: +page.svelte
frontend/src/routes/appointments/[id]/: +page.svelte
frontend/src/routes/appointments/new/: +page.svelte
frontend/src/routes/billing/: +page.svelte
frontend/src/routes/billing/new/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/notes/: +page.svelte
frontend/src/routes/notes/[id]/: +page.svelte
frontend/src/routes/notes/new/: +page.svelte
frontend/src/routes/patients/: +page.svelte
frontend/src/routes/patients/[id]/: +page.svelte
frontend/src/routes/patients/new/: +page.svelte
frontend/src/routes/settings/: +page.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
