[package]
name = "hedtronix-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hedtronix-core = { path = "../hedtronix-core" }
hedtronix-db = { path = "../hedtronix-db" }
hedtronix-crypto = { path = "../hedtronix-crypto" }
tokio.workspace = true
axum.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
