[package]
name = "hedtronix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
validator.workspace = true
automerge.workspace = true
rust_decimal = { version = "1.40.0", features = ["serde"] }
