[package]
name = "hedtronix-db"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hedtronix-core = { path = "../hedtronix-core" }
tokio.workspace = true
sqlx.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
automerge.workspace = true
