[package]
name = "hedtronix-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hedtronix-core = { path = "../hedtronix-core" }
hedtronix-db = { path = "../hedtronix-db" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
automerge.workspace = true
